force-app/main/default/objects/MD_MenuConfig__mdt/MD_MenuConfig__mdt.object-meta.xml
<CustomObject>
    <label>MD MenuConfig</label>
    <pluralLabel>MD MenuConfigs</pluralLabel>
</CustomObject>