force-app/main/default/objects/MD_MenuConfig__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Toggle its visibility in the MD menu.</description>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>