force-app/main/default/objects/MD_MenuConfig__mdt/fields/IsLegacy__c.field-meta.xml
<CustomField>
    <fullName>IsLegacy__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It means the menu item is referring to an old MD page.</description>
    <label>Is Legacy?</label>
    <type>Checkbox</type>
</CustomField>