force-app/main/default/objects/MD_MenuConfig__mdt/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>en_US</fullName>
                <default>true</default>
                <label>en_US</label>
            </value>
            <value>
                <fullName>pt_BR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>