force-app/main/default/objects/MD_MenuConfig__mdt/fields/ParentMenu__c.field-meta.xml
<CustomField>
    <fullName>ParentMenu__c</fullName>
    <label>Parent Menu</label>
    <length>50</length>
    <type>Text</type>
</CustomField>