force-app/main/default/objects/MD_MenuConfig__mdt/fields/PermissionSetAPI__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetAPI__c</fullName>
    <label>Permission Set API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>