force-app/main/default/objects/MD_MenuConfig__mdt/listViews/MENUCONFIG.listView-meta.xml
<ListView>
    <fullName>MENUCONFIG</fullName>
    <columns>Language__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PermissionSetAPI__c</columns>
    <columns>Order__c</columns>
    <columns>ParentMenu__c</columns>
    <columns>URL__c</columns>
    <columns>IsLegacy__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>MENUCONFIG</label>
    <language>en_US</language>
</ListView>